k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: gpu-sizer
  namespace: gpu-sizer
spec:
  host: gpu-sizer.apps.osmt.johan.ml
  to:
    kind: Service
    name: gpu-sizer
  port:
    targetPort: 3000
  tls:
    termination: edge
  wildcardPolicy: None
